--- a/includes/fe-index.html
+++ b/includes/fe-index.html
@@ -20,18 +20,18 @@
             <div class="input-group text-dark mb-3">
                 <span class="input-group-text">@</span>
                 <div class="form-floating">
-                    <input type="text" name="user" class="form-control" id="username" placeholder="Username">
+                    <input type="text" name="user" id="username" class="form-control" placeholder="Username" autocapitalize="none" autocorrect="off">
                     <label for="username">Username</label>
                 </div>
                 <span class="input-group-text">@</span>
                 <div class="form-floating">
-                    <input type="text" name="instance" class="form-control" id="instance" placeholder="Instance">
+                    <input type="text" name="instance" id="instance" class="form-control" placeholder="Instance" autocapitalize="none" autocorrect="off">
                     <label for="instance">Instance</label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Go to my follow page</button>
+            <button type="submit" class="btn btn-primary w-100 text-uppercase">Go to my follow page</button>
         </form>
-        <p class="text-white-50 text-center">
+        <p class="text-light text-opacity-50 text-center">
             This project is open source by 
             <a class="text-reset" rel="author" href="https://www.matthewthom.as">Matthew Thomas</a>
             under the 
